using dedicated authenticated-only endpoint for workers to fetch reqs
